--- a/A2/a2.css
+++ b/A2/a2.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: black;
+  background-color: #111111;
+  color: #FFFFFF;
 }
 
 #colors{
@@ -14,6 +15,26 @@ body {
   display: inline-block;
   width: 32px;
   height: 32px;
+}
+
+.button_div{
+  display: inline-block;
+  position: relative;
+}
+
+.tseperator{
+  width: 104px;
+  display: inline-block;
+}
+
+.seperator{
+  width: 32px;
+  display: inline-block;
+}
+
+.hseperator{
+  width: 16px;
+  display: inline-block;
 }
 
 .white{
