--- a/A3/a3.css
+++ b/A3/a3.css
@@ -5,3 +5,70 @@ body {
   color: #EEEEEE;
 }
 
+#colors{
+  font-size: 0px;  /* remove margins in inline block */
+  position: relative;
+  left: 160px;
+}
+
+.color_div{
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+}
+
+.white{
+  background-color: #FFFFFF;
+}
+
+.gray{
+  background-color: #7F7F7F;
+}
+
+.red{
+  background-color: #FF0000;
+}
+
+.orange{
+   background-color: #FF7F00;
+}
+
+.yellow{
+  background-color: #FFFF00;
+}
+
+.light_green{
+  background-color: #7FFF00;
+}
+
+.green{
+  background-color: #00FF00;
+}
+
+.teal{
+  background-color: #00FF7F;
+}
+
+.cyan{
+  background-color: #00FFFF;
+}
+
+.light_blue{
+  background-color: #007FFF;
+}
+
+.blue{
+  background-color: #0000FF;
+}
+
+.violet{
+  background-color: #7F00FF;
+}
+
+.magenta{
+  background-color: #FF00FF;
+}
+
+.pink{
+  background-color: #FF007F;
+}
