--- a/A3/a3.css
+++ b/A3/a3.css
@@ -5,10 +5,30 @@ body {
   color: #EEEEEE;
 }
 
+.col{
+  display: inline-block;
+  position: absolute;
+}
+
+#right{
+  left: 896px;
+  top: 144px;
+}
+
+#sliders{
+  top: 196px;
+  left: 6px;
+}
+
+#viewed{
+  top: 512px;
+  left: 32px;
+}
+
 #colors{
   font-size: 0px;  /* remove margins in inline block */
   position: relative;
-  left: 160px;
+  left: 144px;
 }
 
 .color_div{
@@ -72,3 +92,50 @@ body {
 .pink{
   background-color: #FF007F;
 }
+
+.rainbow{
+   display: inline-block;
+   width: 32px;
+   height: 32px;
+   background-image: url("assets/rainbow.png");
+}
+
+.shape-selector input{
+    margin:0;padding:0;
+    -webkit-appearance:none;
+       -moz-appearance:none;
+            appearance:none;
+}
+.cube{background-image:url(assets/cube.png);}
+.sphere{background-image:url(assets/sphere.png);}
+.cylinder{background-image:url(assets/cylinder.png);}
+
+.shape-selector input:active +.model-shape{opacity: .9;}
+.shape-selector input:checked +.model-shape{
+    -webkit-filter: none;
+       -moz-filter: none;
+            filter: none;
+}
+.model-shape{
+    cursor:pointer;
+    background-size:contain;
+    background-repeat:no-repeat;
+    display:inline-block;
+    width:96px;height:96px;
+    -webkit-transition: all 100ms ease-in;
+       -moz-transition: all 100ms ease-in;
+            transition: all 100ms ease-in;
+    -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
+       -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
+            filter: brightness(1.8) grayscale(1) opacity(.7);
+}
+.model-shape:hover{
+    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
+       -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
+            filter: brightness(1.2) grayscale(.5) opacity(.9);
+}
+
+/* Extras */
+a:visited{color:#888}
+a{color:#444;text-decoration:none;}
+p{margin-bottom:.3em;}
